# Wolf-Eye

./: LICENSE  README.md
backend/: pyproject.toml
backend/src/: xMain.py
backend/src/ai/: __init__.py  brain.py
backend/src/ai/agents/: __init__.py  cam_agent.py  sitrep_agent.py
backend/src/ai/tools/: __init__.py  aim_tool.py  comms_tool.py  data_tool.py  drone_tool.py  sonar_tool.py
backend/src/api/mcp/: brain_mcp.py
backend/src/api/routes/: data.py  root.py
backend/src/middleware/: middleware.py
backend/src/modules/autotarget/: __init__.py  main.py
backend/src/modules/database/: __init__.py  main.py
backend/src/modules/database/db/: wolf_eye.json
backend/src/modules/object_detection/: __init__.py  main.py
frontend/: index.html  package.json  pnpm-lock.yaml  public.env  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: ai.ts  data.ts  getserver.ts
frontend/src/components/: ChatPanel.tsx  CommsPanel.tsx
frontend/src/hooks/: useMapVisibility.ts
frontend/src/pages/DroneMode/: DroneList.tsx  DroneOverlay.tsx  HumanList.tsx  MapClickHandler.tsx  ObjectiveDialog.tsx  ObjectiveList.tsx  clickGuard.ts  index.tsx  shared.tsx
frontend/src/pages/VrMode/: index.tsx
frontend/src/store/: geo.ts  useAiStore.ts  useCommsStore.ts  useMapStore.ts
frontend/src/theme/: colors.ts
